# alx-onboarding

Desktop/0x00-map_your_mind/: .0-sum_squares.txt.swp  .0_sum_squares.txt.swp  0_sum_squares.txt  1-sorting.txt  2-running_sum.txt
Desktop/Preee/pre-c/: .pre-commit-config.yaml  pyproject.toml
Desktop/Preee/pre-c/pre_c/: main.py
Desktop/Preee/pre-c/tests/: _test.py
