[tool.poetry]
name = "pre-c"
version = "0.1.0"
description = ""
authors = ["harksodje <harksodje@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^2.19.0"
black = "^22.3.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
